2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/11_init_bool_par_string.deca
// Description :
//    initialisation d'un boolean par string
// Resultats :
//    Erreur Contexteulle : ligne 10 : le string ne peut pas être affecté à boolean
//
// Historique :
// cree le 09/01/2024

{
    boolean  b = "bonjour" ;
}